--- a/index.html
+++ b/index.html
@@ -717,7 +717,8 @@
                 align-items: center;
                 text-align: center;
                 padding-bottom: 25px;
-                border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                /* 核心修改：移除底部分割线 */
+                border-bottom: none;
             }
             
             .footer-contact-section {
