--- a/1.html
+++ b/1.html
@@ -1005,6 +1005,18 @@
             .social-links-section {
                 justify-content: center;
             }
+            
+            /* 新增：针对更小屏幕的卡片居中和单列显示 */
+            .cards-container {
+                display: flex; /* 改为 flex 布局 */
+                flex-direction: column; /* 垂直排列 */
+                align-items: center; /* 居中对齐 */
+                gap: 20px;
+            }
+            .card {
+                width: 100%; /* 卡片宽度铺满 */
+                max-width: 400px; /* 限制最大宽度，防止卡片过宽 */
+            }
         }
     </style>
 </head>
