--- a/hao.html
+++ b/hao.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -719,6 +720,7 @@
                 <div class="search-area">
                     <div class="search-filters">
                         <span class="search-engine-btn active" data-engine="baidu">百度</span>
+                        <span class="search-engine-btn" data-engine="chaoyin">超引</span>
                         <span class="search-engine-btn" data-engine="ai">百度AI</span>
                         <span class="search-engine-btn" data-engine="huaban">搜花瓣</span>
                         <span class="search-engine-btn" data-engine="tupian">百度图片</span>
@@ -916,6 +918,7 @@
         };
         const searchEngineData = {
             baidu: { placeholder: '搜索 百度...', url: 'https://www.baidu.com/s?wd=' },
+            chaoyin: { placeholder: '搜索 字造超引...', url: 'https://www.zizao.top/tools/chaoyin?char=' },
             ai: { placeholder: '搜索 百度AI...', url: 'https://chat.baidu.com/search?word=' },
             huaban: { placeholder: '搜花瓣图片...', url: 'https://huaban.com/search?q=' },
             tupian: { placeholder: '搜索百度图片...', url: 'https://image.baidu.com/search/index?tn=baiduimage&fm=result&ie=utf-8&word=' },
