--- a/hao.html
+++ b/hao.html
@@ -918,7 +918,7 @@
         };
         const searchEngineData = {
             baidu: { placeholder: '搜索 百度...', url: 'https://www.baidu.com/s?wd=' },
-            chaoyin: { placeholder: '搜索 字造超引...', url: 'https://www.zizao.top/tools/chaoyin?char=' },
+            chaoyin: { placeholder: '请输入单字 搜索字造超引...', url: 'https://www.zizao.top/tools/chaoyin?char=' },
             ai: { placeholder: '搜索 百度AI...', url: 'https://chat.baidu.com/search?word=' },
             huaban: { placeholder: '搜花瓣图片...', url: 'https://huaban.com/search?q=' },
             tupian: { placeholder: '搜索百度图片...', url: 'https://image.baidu.com/search/index?tn=baiduimage&fm=result&ie=utf-8&word=' },
