--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -304,12 +305,12 @@
 
         /* 新增的图标容器样式 */
         .icon-wrapper {
-            width: 50px;
-            height: 50px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            overflow: hidden;
-            display: inline-block;
+                width: 75px; /* 增加宽度 */
+                height: 40px; /* 保持或略微调整高度 */
+                border-radius: 10px; /* 维持圆角，或根据需要调整 */
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+                overflow: hidden;
+                display: inline-block;
         }
 
         .social-icon, .qr-code-icon {
@@ -498,18 +499,20 @@
                 <div class="social-links">
                     <div class="qr-code-container">
                         <div class="icon-wrapper">
-                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/hT4M/84X84/wx.webp" alt="微信好友图标" class="qr-code-icon">
+                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/epGu/400X400/wx.webp/webp" alt="微信好友图标" class="qr-code-icon">
                         </div>
                         <div class="qr-code-popup">
-                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/XoGU/251X251/iwg.webp" alt="微信好友二维码">
+                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Bwal/251X251/iwx.webp" alt="微信好友二维码">
+                            <p>扫码加微信</p>
                         </div>
                     </div>
                     <div class="qr-code-container">
                         <div class="icon-wrapper">
-                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/yV2J/84X84/wxmp.webp" alt="微信公众号图标" class="qr-code-icon">
+                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/epGu/400X400/wx.webp/webp" alt="微信公众号图标" class="qr-code-icon">
                         </div>
                         <div class="qr-code-popup">
-                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Bwal/251X251/iwx.webp" alt="微信公众号二维码">
+                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/XoGU/251X251/iwg.webp" alt="微信公众号二维码">
+                            <p>关注微信公众号</p>
                         </div>
                     </div>
 
