--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="https://www.zizao.top" class="logo">
-                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/9BXx/1108X308/logo.png" alt="字造Logo" class="logo-image">
+                <img src="https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/FhEy/249X79/logo.png/webp" alt="字造Logo" class="logo-image">
             </a>
             <a href="#" class="nav-button">合作</a>
         </div>
@@ -539,7 +539,7 @@
     
     <div class="hero-section">
         <div class="hero-image-container">
-            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg" alt="英雄图片">
+            <img src="https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/h0ur/2500X700/index.jpg/webp" alt="英雄图片">
         </div>
         <div class="hero-content">
             <h1>字造起点黑VF</h1>
@@ -555,7 +555,7 @@
         <div class="container">
             <div class="card-container">
                 <a href="" class="card" target="_blank" rel="noopener noreferrer">
-                    <div class="card-bg" style="background-image: url('1.jpg');"></div>
+                    <div class="card-bg" style="background-image: url('https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp');"></div>
                     <div class="card-content">
                         <h3>字库产品(暂未上线)</h3>
                         <p>以字体探索美学心新感知，持续开发有价值的字体是，探索可变技术在中文字库领域的更多可能性</p>
@@ -564,7 +564,7 @@
                 </a>
 
                 <a href="https://www.zizao.top/hao" class="card" target="_blank" rel="noopener noreferrer">
-                    <div class="card-bg" style="background-image: url('2.jpg');"></div>
+                    <div class="card-bg" style="background-image: url('https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/tKbr/930X710/index2.jpg/webp');"></div>
                     <div class="card-content">
                         <h3>设计导航</h3>
                         <p>以字体为主要核心的综合设计导航，整理囊括国内外优质好站，定期维护整理。设计师必备的灵感百宝库</p>
@@ -573,7 +573,7 @@
                 </a>
 
                 <a href="https://www.zizao.top/tools/chaoyin" class="card" target="_blank" rel="noopener noreferrer">
-                    <div class="card-bg" style="background-image: url('123.gif');"></div>
+                    <div class="card-bg" style="background-image: url('https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/seZE/930X710/index3.jpg/webp');"></div>
                     <div class="card-content">
                         <h3>超引SuperX</h3>
                         <p>独家整理的免费形近字查询神器，对话式的便捷丝滑体验，推荐字体设计师等职业使用</p>
