--- a/index.html
+++ b/index.html
@@ -627,6 +627,11 @@
                             <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/msSh/101X100/b.webp" alt="bilibili主页" class="social-icon">
                         </div>
                     </a>
+                    <a href="https://weibo.com/u/7931697572" target="_blank" rel="noopener noreferrer">
+                        <div class="social-button bilibili-button">
+                            <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Z51u/101X100/wb.webp/webp" alt="微博主页" class="social-icon">
+                        </div>
+                    </a>
                 </div>
             </div>
 
