--- a/fonts/index.html
+++ b/fonts/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>您的字库品牌 - 首页</title>
 
-    <link rel="stylesheet" href="pages/global.css">
+    <link rel="stylesheet" href="https://www.zizao.top/fonts/pages/global.css">
     
     <style>
         /* --- 主内容区容器 (80% 宽度优化) --- */
@@ -241,8 +242,8 @@
         // --- 绑定事件和动画逻辑 ---
         document.addEventListener('DOMContentLoaded', async function() {
             // 1. 加载 header 和 footer (必须放在最前面)
-            await loadHTML('pages/header.html', 'header-placeholder');
-            await loadHTML('pages/footer.html', 'footer-placeholder');
+            await loadHTML('https://www.zizao.top/fonts/pages/header.html', 'header-placeholder');
+            await loadHTML('https://www.zizao.top/fonts/pages/footer.html', 'footer-placeholder');
             
             // 【页面加载完成后淡入】
             document.body.style.opacity = '1';
