--- a/hao.html
+++ b/hao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>字造导航 - 设计师的灵感百宝库</title>
+    <title>设计导航 - 自在造字</title>
     <meta name="description" content="字造设计导航，设计师必备的灵感库。">
     <meta name="keywords" content="字造, 导航, 设计网站, 设计导航">
     <meta name="author" content="字造">
