--- a/fonts/index.html
+++ b/fonts/index.html
@@ -541,15 +541,9 @@
     <script>
         // 字体数据结构 (保持不变)
         const fontData = [
-            { name: '宋体 · 沉静', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-1.html', tags: ['宋体', '正文', '免费商用'] },
-            { name: '黑体 · 现代', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-2.html', tags: ['黑体', '标题'] },
-            { name: '手写 · 灵动', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-3.html', tags: ['手写', '卡通', '免费商用'] },
-            { name: '圆体 · 可爱', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-4.html', tags: ['圆体', '卡通'] },
-            { name: '草书 · 狂放', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-5.html', tags: ['书法'] },
-            { name: '行楷 · 雅致', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-6.html', tags: ['书法', '免费商用'] },
-            { name: '新字体 · 简约', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'font-detail-7.html', tags: ['黑体', '标题', '免费商用'] },
+            { name: '字造起点黑 · 即将上线', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/qidiansans', tags: [ '正文', '免费商用'] },
         ];
-        const categories = ['全部', '免费商用', '卡通']; 
+        const categories = ['全部', '免费商用']; 
 
         document.addEventListener('DOMContentLoaded', function() {
             // 【页面加载完成后淡入】
