--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 <a href="https://www.zizao.top/fonts" class="card" target="_blank" rel="noopener noreferrer">
                     <div class="card-bg" style="background-image: url('https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp');"></div>
                     <div class="card-content">
-                        <h3>字库产品(暂未上线)</h3>
+                        <h3>字库产品</h3>
                         <p>以字体探索美学心新感知，持续开发有价值的字体是，探索可变技术在中文字库领域的更多可能性</p>
                         <span class="card-action-text">了解更多</span>
                     </div>
