--- a/hao.html
+++ b/hao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>设计导航 - 自在造字（字造ZIZAO）</title>
+    <title>设计导航 - 自在造字</title>
     <meta name="description" content="字造设计导航，设计师必备的灵感库。">
     <meta name="keywords" content="字造, 导航, 设计网站, 设计导航">
     <meta name="author" content="字造">
@@ -740,8 +740,8 @@
                         <button id="search-button"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="quick-links-area">
-                        <span class="quick-link-btn" data-link="https://www.zizao.top">字造字型</span>
-                        <span class="quick-link-btn" data-link="https://www.dazi.co/index">AskManyAI</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top">首页</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top">自在造字</span>
                         <span class="quick-link-btn" data-link="https://www.pinterest.com">Pinterest</span>
                         <span class="quick-link-btn" data-link="https://chat.deepseek.com">Deepseek</span>
                         <span class="quick-link-btn" data-link="https://www.wenxiaobai.com">问小白AI</span>
