--- a/hao.html
+++ b/hao.html
@@ -741,7 +741,7 @@
                     </div>
                     <div class="quick-links-area">
                         <span class="quick-link-btn" data-link="https://www.zizao.top">首页</span>
-                        <span class="quick-link-btn" data-link="https://www.zizao.top">自在造字</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top/fonts">自在造字</span>
                         <span class="quick-link-btn" data-link="https://www.pinterest.com">Pinterest</span>
                         <span class="quick-link-btn" data-link="https://chat.deepseek.com">Deepseek</span>
                         <span class="quick-link-btn" data-link="https://www.wenxiaobai.com">问小白AI</span>
