--- a/tools/chaoyin.html
+++ b/tools/chaoyin.html
@@ -636,8 +636,8 @@
     
     <div class="copy-notification" id="copy-notification">已复制到剪贴板</div>
 
-<script src="common.js"></script>
-<script src="data.js"></script>
+<script src="https://www.zizao.top/pages/common.js"></script>
+<script src="https://www.zizao.top/pages/data.js"></script>
     
 <script>
     const USER_AVATAR_URL = "https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251004/11ox/300X300/2.png/webp"; 
