--- a/bao.html
+++ b/bao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>百宝库 - 自在造字（字造ZIZAO）</title>
+    <title>设计资源宝库 - 自在造字（字造ZIZAO）</title>
     <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。">
     <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="zizaoicon">
 
@@ -482,7 +482,7 @@
             <div class="hero-background"></div>
             <div class="hero-overlay"></div>
             <div class="search-content">
-                <h1>百宝库-即搜即用</h1>
+                <h1>设计资源宝库</h1>
                 <div class="search-box">
                     <input type="text" id="fontSearchInput" placeholder="请输入关键词...">
                     
