--- a/hao.html
+++ b/hao.html
@@ -902,7 +902,7 @@
     <div class="footer">
         <p>© 2025 字造设计导航 | 已收录 400+ 优质设计网站</p>
     </div>
-    <script src="pages/cardData.js"></script>
+    <script src="https://www.zizao.top/pages/hao-data.js"></script>
     <script>
         const appConfig = {
             categories: ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J'],
