--- a/fonts/index.html
+++ b/fonts/index.html
@@ -360,7 +360,7 @@
         // II. 页面内容数据（页面独有）
         // ----------------------------------------------------
         const fontData = [
-            { name: '字造起点黑 · 即将上线', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/qidiansans', tags: [ '正文', '免费商用'] },
+            { name: '字造起点黑 · 即将上线', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/i/qidiansans', tags: [ '正文', '免费商用'] },
             { name: '在线体验 · 全部字体', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/web', tags: [ '免费商用'] },
         ];
         
