--- a/hao.html
+++ b/hao.html
@@ -710,8 +710,8 @@
                 </div>
                 <ul class="categories" id="categories-list">
                     <li><a href="#A" class="category-btn active"><div class="category-icon"></div>常用推荐</a></li>
-                    <li><a href="#B" class="category-btn"><div class="category-icon"></div>灵感创意</a></li>
-                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>字体字形</a></li>
+                    <li><a href="#B" class="category-btn"><div class="category-icon"></div>字体设计</a></li>
+                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>灵感创意</a></li>
                     <li><a href="#D" class="category-btn"><div class="category-icon"></div>AI工具</a></li>
                     <li><a href="#E" class="category-btn"><div class="category-icon"></div>免版权资源</a></li>
                     <li><a href="#F" class="category-btn"><div class="category-icon"></div>设计神器</a></li>
@@ -764,13 +764,13 @@
                     <div class="cards-container hidden" id="A-A5"></div>
                 </section>
                 <section id="B" class="category-section">
-                    <h2>灵感创意</h2>
+                    <h2> 字体设计</h2>
                     <div class="subcategory-tabs">
-                        <div class="subcategory-tab active" data-category="B" data-subcategory="B1">#字体灵感</div>
-                        <div class="subcategory-tab" data-category="B" data-subcategory="B2">#版式设计</div>
-                        <div class="subcategory-tab" data-category="B" data-subcategory="B3">#品牌VI</div>
-                        <div class="subcategory-tab" data-category="B" data-subcategory="B4">#LOGO设计</div>
-                        <div class="subcategory-tab" data-category="B" data-subcategory="B5">#摄影鉴赏</div>
+                        <div class="subcategory-tab active" data-category="B" data-subcategory="B1">#古风书法</div>
+                        <div class="subcategory-tab" data-category="B" data-subcategory="B2">#字体灵感</div>
+                        <div class="subcategory-tab" data-category="B" data-subcategory="B3">#字体厂商</div>
+                        <div class="subcategory-tab" data-category="B" data-subcategory="B4">#字体工具</div>
+                        <div class="subcategory-tab" data-category="B" data-subcategory="B5">#字体动效</div>
                     </div>
                     <div class="cards-container" id="B-B1"></div>
                     <div class="cards-container hidden" id="B-B2"></div>
@@ -779,12 +779,12 @@
                     <div class="cards-container hidden" id="B-B5"></div>
                 </section>
                 <section id="C" class="category-section">
-                    <h2>字体字形</h2>
+                    <h2>灵感创意</h2>
                     <div class="subcategory-tabs">
-                        <div class="subcategory-tab active" data-category="C" data-subcategory="C1">#字体品牌</div>
-                        <div class="subcategory-tab" data-category="C" data-subcategory="C2">#可变字体</div>
-                        <div class="subcategory-tab" data-category="C" data-subcategory="C3">#字形字符</div>
-                        <div class="subcategory-tab" data-category="C" data-subcategory="C4">#动画效果</div>
+                        <div class="subcategory-tab active" data-category="C" data-subcategory="C1">#版式设计</div>
+                        <div class="subcategory-tab" data-category="C" data-subcategory="C2">#品牌VI</div>
+                        <div class="subcategory-tab" data-category="C" data-subcategory="C3">#LOGO设计</div>
+                        <div class="subcategory-tab" data-category="C" data-subcategory="B4">#摄影鉴赏</div>
                     </div>
                     <div class="cards-container" id="C-C1"></div>
                     <div class="cards-container hidden" id="C-C2"></div>
