--- a/hao.html
+++ b/hao.html
@@ -711,10 +711,10 @@
                 <ul class="categories" id="categories-list">
                     <li><a href="#A" class="category-btn active"><div class="category-icon"></div>常用推荐</a></li>
                     <li><a href="#B" class="category-btn"><div class="category-icon"></div>字体设计</a></li>
-                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>灵感创意</a></li>
+                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>视觉灵感</a></li>
                     <li><a href="#D" class="category-btn"><div class="category-icon"></div>AI工具</a></li>
                     <li><a href="#E" class="category-btn"><div class="category-icon"></div>免版权资源</a></li>
-                    <li><a href="#F" class="category-btn"><div class="category-icon"></div>设计神器</a></li>
+                    <li><a href="#F" class="category-btn"><div class="category-icon"></div>设计工具</a></li>
                     <li><a href="#G" class="category-btn"><div class="category-icon"></div>设计素材</a></li>
                     <li><a href="#H" class="category-btn"><div class="category-icon"></div>配色方案</a></li>
                     <li><a href="#I" class="category-btn"><div class="category-icon"></div>知识社区</a></li>
@@ -779,7 +779,7 @@
                     <div class="cards-container hidden" id="B-B5"></div>
                 </section>
                 <section id="C" class="category-section">
-                    <h2>灵感创意</h2>
+                    <h2>视觉灵感</h2>
                     <div class="subcategory-tabs">
                         <div class="subcategory-tab active" data-category="C" data-subcategory="C1">#版式设计</div>
                         <div class="subcategory-tab" data-category="C" data-subcategory="C2">#品牌VI</div>
@@ -822,7 +822,7 @@
                     <div class="cards-container hidden" id="E-E6"></div>
                 </section>
                 <section id="F" class="category-section">
-                    <h2>设计神器</h2>
+                    <h2>设计工具</h2>
                     <div class="subcategory-tabs">
                         <div class="subcategory-tab active" data-category="F" data-subcategory="F1">#在线设计平台</div>
                         <div class="subcategory-tab" data-category="F" data-subcategory="F2">#LOGO生成</div>
